wip: added 3rd task and comments